[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "yufang-first-package",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.uv.sources]
yufang-first-package = { path = "../packages/yufang-first-package", editable = true }
